--- a/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/UserBundle/Resources/views/Page/index.html.twig
@@ -17,9 +17,19 @@
 		<div class="row" id="separator">
 			<div class="col-md-12"> </div>
 		</div>
+		{% for message in app.session.flashbag.get('errors') %}
+	    	<p>{{ message }}</p>
+	    {% endfor %}
+	    <div class="modal fade modal-ok" id="okModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+		    <div class="modal-dialog">
+		        <div class="modal-content">
+		        	OK
+		        </div>
+		    </div>
+		</div>
 		<div id="events" class="row listing-events">
 		{% for event in events %}
-			<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
+			<div class="col-md-3 col-lg-3 col-sm-6 col-xs-12" id="event-{{event.id}}">
 				<div class="event-thumbnail">
 					<div class="head">
 						<a href="{{ path('PlanItEventBundle_event', { 'id': event.id }) }}" class="event_button">
