--- a/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/event.html.twig
@@ -2,8 +2,8 @@
 {% block content %}
 	<div id="content_general_event" class="container">
 		<div class="row" id="title">
-			<div class="col-md-10" > <h1>{{ event.name }} </h1></div>
-			<div class="col-md-2 pull-right">
+			<div class="col-md-10 col-sm-9 col-xs-8" > <h1>{{ event.name }} </h1></div>
+			<div class="col-md-2 col-sm-3 col-xs-4 pull-right">
                 <button data-toggle="modal" data-target=".updateEventModal" data-type="">{{'update_event'|trans}}</button>
             </div>
 		</div>
