--- a/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TransportationBundle/Resources/views/Page/index.html.twig
@@ -1,24 +1,98 @@
-{% extends 'PlanItPlaceBundle::layout.html.twig' %}
-{% block stylesheets %}
-    {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    {% stylesheets 
-    '@PlanItTransportationBundle/Resources/public/css/*.scss' 
-    filter="compass" %}
-	      <link rel="stylesheet" media="screen" href="{{ asset_url }}" />
-	{% endstylesheets %}
-{% endblock %}
+{% extends 'PlanItTransportationBundle::layout.html.twig' %}
 
 {% block content %}
 <div class="container">
 	<div class="row" id="title">
-        <div class="col-md-12" > <h1>Transport</h1> </div>
+        <div class="col-md-12" > <h1>{{'transportation'|trans}}</h1> </div>
+        <div class="col-md-2 pull-right bt_transportation">
+            <button data-toggle="modal" data-target=".updateModuleModal" data-type="">{{'update_module'|trans}}</button>
+        </div>
     </div>
 
 	<div class="row" id="separator">
 		<div class="col-md-12"> </div>
 	</div>
+	<div class="modal fade modal-ok" id="okModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                OK
+            </div>
+        </div>
+    </div>
+    {% for message in app.session.flashbag.get('errors') %}
+        <p>{{ message }}</p>
+    {% endfor %}
 	<section>
+		<div class="row">
+	        <div class="col-md-3 bt_place"><button data-toggle="modal" data-target=".addTransportationModal" class="col-md-3">{{'add_transportation'|trans}}</button></div>
+	    </div>
+	    <div class="row list" id="list">
+			{% for transportation in module.transportations%}
+			<div id="transportation-{{transportation.id}}">
+				<div class="div-checkbox">
+					<input type="checkbox" class="check" id="check-{{transportation.id}}" onClick="choseTransportation({{transportation.id}})" {% if transportation.state == 1 %} checked {% endif %}>
+				</div>
+				<div id="head_list" class="head-list accordion-head {% if transportation.state == 1 %} checked {% else %} nochecked {% endif %}">	
+					<div class="name"><input type="text" id="name-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.name}}"></div>
+				    <div class="price"><input type="text" id="price-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.price}}">€</div>
+				    <button onclick="showModalDeleteTransportation({{transportation.id}}, '{{transportation.name}}')">X</button>
+				</div>
+				<div class="accordion-body">
+				    <div class="labels row">
+				    	<div class="col-lg-3 col-md-12 col-sm-12 img_place">
+				    		{% if transportation.image != null %}
+				    			<img src="/images/transportation/transportations_pictures/{{transportation.image}}" width="100%"/>
+				    		{% else %}
+				    			<img src="/images/no-image.jpg" width="100%"/>
+				    		{% endif %}
+								<div class="bt_place">
+				                    <button data-toggle="modal" data-target=".updateImageModal" data-id="{{transportation.id}}">{{'update_image'|trans}}</button> 
+				                </div>
+				        </div>
+				    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
+				        	<p><span class="label_descr">{{'capacity'|trans}}</span> : <input type="text" id="capacity-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.capacity}}"></p>
+				        	<p><span class="label_descr">{{'tel'|trans}}</span> : <input type="text" id="tel-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.tel}}"></p>
+				        	<p><span class="label_descr">{{'website'|trans}}</span> : <input type="text" id="website-transportation-{{transportation.id}}" onblur="updateTransportation({{transportation.id}})" value="{{transportation.website}}"> </p>
+				        	<p><span class="label_descr">{{'state'|trans}}</span> : 
+				        		<select id="state-transportation-{{transportation.id}}" onchange="updateTransportation({{transportation.id}})">
+				        			<option value="0" {% if transportation.state == 0 %} selected {% endif %}>{{'refused'|trans}}</option>
+				        			<option value="2" {% if transportation.state == 2 %} selected {% endif %}>{{'contacted'|trans}}</option>
+				        			<option value="3" {% if transportation.state == 3 %} selected {% endif %}>{{'tocontact'|trans}}</option>
+				        			<option value="1" {% if transportation.state == 1 %} selected {% endif %}>{{'accepted'|trans}}</option>
+				        		</select>
+				        	</p>
+				        	<p><span class="label_descr">{{'contract'|trans}}</span> : <a target="_blank" href="/files/transportation/contracts/{{transportation.contract}}">{{transportation.contract}} </a>
+				                <div class="bt_place">
+				                    <button data-toggle="modal" data-target=".updateContractModal" data-id="{{transportation.id}}">{{'update_contract'|trans}}</button> 
+				                </div>
+				        	</p>
+				    	</div>
+				    	<div class="col-lg-5 col-md-6 col-sm-12" id="map_canvas_{{transportation.id}}">
+				    	</div>
 
+				    </div>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		<div class="modal fade deleteTransportationModal validate" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+		    <div class="modal-dialog">
+		        <div class="modal-content">
+		            <div class="modal-header">
+		            <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+		            <h4 class="modal-title" id="myModalLabel_deleteTransportation"></h4>
+		            </div>
+		            <div class="modal-body row">
+		                <button id="delete_confirm_transportation" class="btn btn-default col-md-6"> {{'yes'|trans}} </button>
+		                <button id="delete_cancel" class="btn btn-default" class ="col-md-6" data-dismiss="modal"> {{'no'|trans}} </button>
+
+		            </div>
+		        </div>
+		  </div>
+		</div>
+		{{ render(controller('PlanItTransportationBundle:Transportation:form', { 'module_id' : module.id } ))}}
+		{{ render(controller('PlanItTransportationBundle:Transportation:contract', { 'module_id' : module.id } ))}}
+		{{ render(controller('PlanItTransportationBundle:Transportation:image', { 'module_id' : module.id } ))}}
 	</section>
 </div>
 
@@ -26,5 +100,6 @@
 
 {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
-    <script> //getEvent({{event_id}}); </script>
+    <script> transportations(); </script>
+    <script> accordeonTransportation(); </script>
 {% endblock %}
